--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -72,20 +72,21 @@ Introduction
 <p>
 In the first half of the twentieth century,
 the rationalist tide had reached its high mark.
-The arts, child rearing, and business management, so it was held, were to be 
+The arts, child rearing, and business management were to be 
 revolutionized according to rationalist precepts.
 In architecture and city planning, rationalism would sweep away that 
 unnecessary clutter of old prejudices that restrained traditional 
 architecture and customary urban organization and build the modern, 
 functional buildings and communities that people truly needed.
-And, with the Soviet Union seen as setting the example of a 
-shining city on a hill, society as a whole was to be transformed into a 
+And, with the Soviet Union seen as setting the example,
+society as a whole was to be transformed into a 
 utopia by tossing aside all attachment to atavistic customs and 
-ancient moral relics and proceeding to design social affairs from first principles.
+ancient moral relics and proceeding to design social 
+affairs from first principles.
 </p>
 
 <p>
-But the many disappointing outcomes of the rationalist program have 
+But since then, the many disappointing outcomes of the rationalist program have 
 considerably dimmed its popularity.
 However, the evidence of those practical failures would not have been as 
 convincing as it was—perhaps it was the case that we just had not 
@@ -128,6 +129,12 @@ Hayek praised Oakeshott, for example, in the introduction to
 knowledge, produced any in-depth commentary on the views of his purported counterpart.
 </p>
 
+<p>
+Therefore, it may be useful to see what others have had to say about the
+relationship of Hayek's and Oakeshott's thought, before launching into our own
+analysis.
+</p>
+
 <h3>
     Previous Comparisons of Hayek and Oakeshott
 </h3>
@@ -139,6 +146,7 @@ knowledge, produced any in-depth commentary on the views of his purported counte
     Kenneth Minogue summed up the difference between Hayek and Oakeshott, from
     a perspective sympathetic to the views of the latter, as follows:
     </p>
+
     <blockquote>
     How might we formulate the difference between Hayek and Oakeshott? Let me
     suggest that it might be done in terms of levels of scepticism. At the
@@ -162,7 +170,6 @@ knowledge, produced any in-depth commentary on the views of his purported counte
     of mankind appeared’ in his time. Hayek is too close to the mischief to
     recognize the universal predicament. (Minogue, 2002)
     </blockquote>
-    </p>
 
 
     <h4>
@@ -223,7 +230,7 @@ epistemology makes such knowledge possible.
     Hayek's Critique of Conservatism
 </h3>
 
-<p class="first_par">Hayek's essay entitled "Why I Am Not a Conservative," 
+<p class="first_par">Hayek's essay "Why I Am Not a Conservative," 
 which was published as a postscript in <i>The Constitution of Liberty</i>, 
 can be taken as an implicit criticism of Oakeshott.
 </p>
@@ -234,7 +241,7 @@ detects in the conservative political stance, writing:
 "Conservatism proper is a legitimate, probably necessary, 
 and certainly widespread attitude of opposition to drastic change.
 It has, since the French Revolution, for a century and a half 
-played an important role in European politics" (REF?)
+played an important role in European politics" (1960: 397)
 </p>
 
 <p>
@@ -242,7 +249,7 @@ Despite this acknowlegement, he has only "two cheers" for conservatism,
 as he continues:
 </p>
 
-<p class="blockquote">Let me now state what seems to me the decisive 
+<blockquote>Let me now state what seems to me the decisive 
 objection to any conservatism which deserves to be called such.
 It is that by its very nature it cannot offer an alternative to the 
 direction in which we are moving.
@@ -255,15 +262,15 @@ The tug of war between conservatives and progressives
 can only affect the speed, not the direction, of contemporary developments.
 But, though there is a need for a 'brake on the vehicle of progress', 
 I personally cannot be content with simply helping to apply the brake.
-(REF?)
-</p>
+(1960: 398)
+</blockquote>
 
 <p>
 In what might plausibly read as a direct criticism of Oakeshott,
 Hayek contends:
 </p>
 
-<p class="blockquote">This brings me to the first point on which the 
+<blockquote>This brings me to the first point on which the 
 conservative and the liberal dispositions differ radically.
 As has often been acknowledged by conservative writers, one of the 
 fundamental traits of the conservative attitude is a fear of change, 
@@ -275,8 +282,8 @@ disliked too rapid change in institutions and public policy;
 here the case for caution and slow process is indeed strong.
 But the conservatives are inclined to use the powers of government 
 to prevent change or to limit its rate to whatever appeals to the more timid mind.
-(REF?)
-</p>
+(1960: 400)
+</blockquote>
 
 <p>
 Hayek, in the above passage, could be seen as raising the following question
@@ -299,7 +306,7 @@ parallels Oakeshott's between 'civil' and 'enterprise' associations.
 He seems particularly close to Oakeshott, for instance, when he writes:
 </p>
 
-<p class="blockquote">The first view holds that human institutions will serve human 
+<blockquote>The first view holds that human institutions will serve human 
 purposes only if they have been deliberately designed for these 
 purposes, often also that the fact that an institution exists is 
 evidence of its having been created for a purpose, and always that we 
@@ -311,13 +318,13 @@ Yet the belief underlying them, that we all owe all beneficial
 institutions to design, and that only such design has made or can make them 
 useful for our purposes, is largely false.
 (1973: 8-9)
-</p>
+</blockquote>
 
 <p>
 And also when he says:
 </p>
 
-<p class="blockquote">Yet the basic assumption underlying the belief that man has 
+<blockquote>Yet the basic assumption underlying the belief that man has 
 achieved mastery of his surroundings mainly through his capacity for 
 logical deduction from explicit premises is factually false, 
 and any attempt to confine his actions to what could thus be 
@@ -338,7 +345,8 @@ And so Hayek writes, 'That freedom can be preserved
 only if it is treated as a supreme principle which must not 
 be sacrificed for particular advantages was fully understood by the 
 leading liberal thinkers of the nineteenth century...' (1973: 72), 
-and one realizes there is something significantly different is going on here.
+and one realizes there is something significantly different
+from Oakeshott is going on here.
 Taleb notes the paradox here: "We may... think that... 
 Hayek would be in the antifragile, antirationalist category... 
 But Hayek missed the notion of optionality..." (2014: 258).
@@ -348,14 +356,14 @@ But Hayek missed the notion of optionality..." (2014: 258).
 Or, as Rowland wrote:
 </p>
 
-<p class="blockquote">On the one hand, Hayek appears to evaluate institutions 
+<blockquote>On the one hand, Hayek appears to evaluate institutions 
 according to whether they are the products of spontaneous evolution;
 liberty and order, he suggests, are a product of such evolutionary processes.
 On the other hand, his development of a model constitution appears to 
 demonstrate his willingness to engage in rational design, exactly the 
 process his traditionalism argues against.
 (1988: 222)
-</p>
+</blockquote>
 
 <h3>
     The Fatal Conceit
@@ -383,19 +391,24 @@ Instead, rationalism for Oakeshott is the attempt to replace practical reason
 
 <p>
 
-This passage from R. G. Collingwood expresses the idea philosophically about as well as I have seen:
-<br />
-<br />
-"The concept it's not something outside the world of sensuous experience:
+The central thesis of this paper is that the difference here between Hayek and
+Oakeshott turns crucially on Oakeshott's heritage of British idealist thought.
+For example, here is R. G. Collingwood expressing the idealist emphasis on
+the concrete:
+</p>
+
+<blockquote>
+The concept it's not something outside the world of sensuous experience:
 it is the very structure in order of that world itself...
 This is the point of view of concrete thought...
 Too abstract is to consider separately things that are inseparable:
 to think of the universal, for instance, without reflecting that it is
 merely the universal of its particulars,
 and to assume that one can isolate it in thought and to 
-study it in this isolation. This assumption is an error." -- <i>Speculum Mentis</i> (1924)
-<br />
-<br />
+study it in this isolation. This assumption is an error. -- <i>Speculum Mentis</i> (1924)
+</blockquote>
+
+<p> 
 In shorter form, Bernard Bosanquet wrote:
 "the fullest universal of character and consciousness will
 embody itself in the finest and most specialized and
@@ -692,6 +705,7 @@ perceptive of the cave-dwellers [will] begin to suspect that, after all, he
 who should be sent on his travels again, or accommodated in a quiet home.
 (1975: 30)
 </blockquote> 
+
 <p>
 The preceding passage from <i>On Human Conduct</i> provides a fresh perspective from
 which we can contemplate the character of the rationalist and perceive how it
@@ -722,6 +736,7 @@ unless they are translated from their native idiom into that of practice.
         skepticism. For instance, right at the beginning of the work, we find
         Oakeshott declaring:
     </p>
+
     <blockquote> 
         By the modality of an enquiry I mean the conditions of relevance that
         constitute it a distinct kind of enquiry and distinguish it both from
@@ -877,6 +892,12 @@ Franco, Paul.
 Gerencser, Steven Anthony.
     <i>The Skeptic’s Oakeshott</i>.
     New York: St. Martin’s Press, 2000.
+</p>
+
+<p class="biblio">
+Hayek, F. A.
+    <i>The Consitution of Liberty</i>.
+    Chicago, Ill.: University of Chicago Press, 1960.
 </p>
 
 <p class="biblio">
