--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -431,7 +431,7 @@ concept of reason at all.
 
 <p>
 
-Published in 1933, this book is a bold defense of philosophical idealism. 
+Published in 1933, this book is a defense of philosophical idealism. 
 In it, Oakeshott argues that only philosophy represents 
 'experience without reservation or arrest' (1933: 4),
 a view he would modify in later works, but never entirely abandon.
@@ -439,15 +439,13 @@ Other 'modes of experience,' such as science, history, and practice, are
 inherently partial forms of understanding, as they arise from
 particular presuppositions, which they leave unquestioned, that form
 these 'worlds of ideas'. This intrinsic conditionality means that these
-modes of experience are not only fall short of
+modes of experience not only fall short of
 grappling with the 'totality of experience',
 but also makes them categorically distinct.
 Each mode is constituted by its own presuppositions, so that no
 mode is in a position to dictate the understanding achieved by any of the
-others. 
-For this paper, what is most relevant is Oakeshott's claim that
-science has no authority over practice.
-If Oakeshott is correct here, then the rationalists'
+others.  For this paper, what is most relevant is Oakeshott's claim that
+science has no authority over practice.  Per Oakeshott, the rationalists'
 dream of reorganizing and improving the 'irrational' world of practice,
 grounded in tradition, by applying abstract, scientific principles to everyday
 conduct, is guilty of categorical irrelevance. Science, as Oakeshott explains,
@@ -460,9 +458,10 @@ given in sensation [and therefore,] the generalizations which express their
 necessary relations cannot be taken to imply that any event or occurrence will
 invariably take place. The concepts do not refer to events;
 and the generalizations are not in respect of events' (1933: 183).
-<br>
-<br>
-The world of practice, on the other hand, experience is understood in
+</p>
+
+<p>
+In the world of practice, on the other hand, experience is understood in
 terms of how a current state of affairs might be transformed into a future
 state understood to be more satisfactory to a specific agent. As such, 'a
 scientific idea must be transformed, taken out of the world of scientific
@@ -487,10 +486,11 @@ practical person in a position to direct scientific research according to her
 personal ambitions. The relevance of this early conclusion of Oakeshott's to
 his later essays on rationalism is, I think, obvious, especially once it is
 recognized that the proper contrast class to rational
-politics is not traditional politics but practical politics.
-<br>
-<br>
+politics is not "traditional politics," as Hayek's "Why I Am Not a
+Conservative" essay miht suggest, but practical politics.
+</p>
 
+<p>
 (In defense of the contention that Oakeshott's later works modify his early
 idealism without overturning it, see, for instance, Nardin (2001: 48–53) or
 Franco (2004);
@@ -498,8 +498,6 @@ for a dissenting view, arguing that Oakeshott should be
 understood to have left the idealism of his youth behind, see Gerencser (2000).
 For a recent picture of the relationship between scientific laws and ordinary
 events that is supportive of Oakeshott's, see Cartwright (1983).)
- 
-
 </p>
 
 <h3>
@@ -507,8 +505,16 @@ events that is supportive of Oakeshott's, see Cartwright (1983).)
 </h3>
 
 <p>
-As Oakeshott saw it, perhaps the most salient feature of the rationalist approach is
-the faith that every essential aspect of any human practice can be conveyed
+It has not been generally recognized that Oakeshott's most recognized work, on
+rationalism in politics and in conduct, follows directly from the philosophical
+ideas put forward in <i>Experience and Its Modes</i>. The rationalist
+misapplies the standards of one mode (theoretical science) in another mode
+(practice) where they are categorically irrelevant.
+</p>
+
+<p>
+As Oakeshott saw it, the rationalist believes
+that every essential aspect of any human practice can be conveyed
 adequately by means of a 'guidebook' comprising explicitly stated rules,
 formalized technical procedures, and general, abstract principles. 
 The rationalist view is that arriving at the correct theory on some
@@ -520,8 +526,9 @@ with a tabula rasa upon which the correct technique for that activity can be
 cleanly inscribed; as Oakeshott put it, in this view, rational conduct involves
 'a certain emptying of the mind, a conscious effort to get rid of preconceptions' (1991
 [1962]: 101).
-<br>
-<br>
+</p>
+
+<p>
 Quite to the contrary of that understanding of the relationship between
 technical guidelines and tacit knowledge, Oakeshott argues that the
 rationalist, in awarding theory primacy over practice, has gotten things
@@ -568,13 +575,13 @@ that will not make him one: but it will
 affect his conduct, and for the worse‘ (1924: 206). That is the point Franco
 was making in noting that 'an erroneous theory can have pernicious practical
 consequences‘ (2004: 93). Since the pronouncements of the rationalist disparage
-current practices, customs, and morals,9 insofar as they do not follow from his
+current practices, customs, and morals, insofar as they do not follow from his
 rational deliberations about how his society ought to be ordered, they will
 erode the spontaneous ease of the communal life that those traditions
 nourished, while offering in its stead only the artificial routines and
 regulations of a 'rational‘ bureaucracy, or worse. Oakeshott offered this
 example: 'First, we do our best to destroy parental authority (because of its
-alleged abuse), then we sentimentally deplore scarcity of ―good homes‖, and we
+alleged abuse), then we sentimentally deplore scarcity of good homes, and we
 end by creating substitutes which complete the work of destruction‘ (1991
 [1962]: 41). Traditional ways are undermined further by the rationalist fantasy
 that social perfection is a realistic goal, so that any practice promoting
