--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -546,32 +546,22 @@ by a theoretical model of the activity to be performed, he is not able to
 stick to his purported guidelines at all:
 instead, he will fall back on some existing practice 
 instead of actually following the abstraction that supposedly guides his
-conduct.
+conduct.  Oakeshott's point here is close to Wittgenstein's on "following a rule":
+at some point we have to go without rules 
+and just know what we are doing as part of a way of life, as otherwise 
+we need an infinite regress of rules: meta-rules to tell us how to follow the
+first level rules, and meta-meta-rules to tell us how to follow them, and so
+on. (See Wittgenstein, 1953: 85-86.)
+</p>
 
-
-Oakeshott's contention, that the rationalist ideal of conduct guided entirely
-by explicitly adopted and provably justified 'principles' is absurd because it
-is impossible to achieve, is a close kin of Wittgenstein's insight that every
-attempt to follow correctly a set of formalized rules necessarily is grounded
-upon informal customs and practices that determine what it means to follow a
-rule 'correctly'.
-
-The formal rules cannot also embody their own 'correct'
-interpretation because any effort to incorporate that interpretation into the
-first-level rules would create a set of 'meta-rules', themselves requiring
-meta- meta-rules to guide the interpretation of the meta-rules, and so on, in
-an infinite regress.
-<br>
-<br>
+<p>
 However, Oakeshott‘s assertion that the rationalist never really can proceed
 according to her avowed principles does not mean that her attempt to adhere to
 them will be inconsequential, but only that it will not succeed. An analogy may
-be helpful here: A person undertaking an effort to fly 
-by vigorously flapping his arms whenever he walks surely will
-fail to reach his end, but, in the endeavor, he will succeed in making his
-perambulations much more tiring, awkward, and comical. As Collingwood wrote, 'A
-person may think he is a poached egg;
-that will not make him one: but it will
+be helpful here: A person trying to become a parrot by strapping on wings and a
+beak and some colorful feathers won't become one, but they will make themselves
+look ridiculous and hamper their day-to-day activities. As Collingwood wrote,
+'A person may think he is a poached egg; that will not make him one: but it will
 affect his conduct, and for the worse‘ (1924: 206). That is the point Franco
 was making in noting that 'an erroneous theory can have pernicious practical
 consequences‘ (2004: 93). Since the pronouncements of the rationalist disparage
@@ -1006,5 +996,12 @@ Taleb, Nassim Nicholas.
     <i>Antifragile: Things That Gain from Disorder</i>.
     New York: Random House, 2014.
 </p>
+
+<p class="biblio">
+Wittgenstein, Ludwig.
+    <i>Philosophical Investigations</i>.
+    New York: Macmillan, 1953.
+</p>
+
 </body>
 </html>
