Added Sensory Order quote.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -218,12 +218,31 @@ epistemology makes such knowledge possible.
     be drawn from a welter of particulars that are, in and of themselves, 
     not susceptible to being understood?
     </p>
+
+    <p>
+    Hayek, in this work, explicitly contends that
+    the concrete is dependent upon the abstract:
+    </p>
     
+    <blockquote> 
+        The continuous presence, while consciousness lasts
+        Of these mental contents of a most abstract character,
+        representing the spatial and temporal structure of 
+        the environment, is not always recognized.
+        This is probably due to the preconception that concrete 
+        perceptions always precedes the more abstract mental contents.
+        There can be little doubt, however, that the distinct conscious 
+        picture of particular phenomena is always embedded, 
+        or surrounded by a semi conscious and more shadowy 
+        outline of the rest of the surroundings..." (2014: 138)
+    </blockquote>
+
     <p>
     Hayek's thought runs aground in this regard because he had 
     not recognized the significance of the revolution in philosophy 
     initiated by Hegel: he had not grasped the idea of the "concrete universal." 
-    On the other hand, Oakeshott's critique of rationalism is based upon that very concept.
+    On the other hand, Oakeshott's critique of rationalism
+    is based upon that very concept.
     </p>
 
 <h3>
@@ -930,6 +949,13 @@ Hayek, F. A.
 Hayek, F. A.
     <i>Studies on the Abuse and Decline of Reason: Text and Documents</i>.
     Chicago: University of Chicago Press, 2010.
+</p>
+
+<p class="biblio">
+Hayek, F. A.
+    <i>The Sensory Order:
+        An Inquiry into the Foundations of Theoretical Psychology</i>.
+    Mansfield Centre, CT: Martino Publishing, 2014.
 </p>
 
 <p class="biblio">
