--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -354,7 +354,7 @@ effectiveness solely or chiefly to the knowledge which we can
 state in words and which can therefore constitute the 
 explicit premises of a syllogism.
 (1973: 11)
-</p>
+</blockquote>
 
 <p>
 However, even at this stage of his thought, Hayek was still, despite his 
@@ -375,7 +375,8 @@ But Hayek missed the notion of optionality..." (2014: 258).
 Or, as Rowland wrote:
 </p>
 
-<blockquote>On the one hand, Hayek appears to evaluate institutions 
+<blockquote>
+    On the one hand, Hayek appears to evaluate institutions 
 according to whether they are the products of spontaneous evolution;
 liberty and order, he suggests, are a product of such evolutionary processes.
 On the other hand, his development of a model constitution appears to 
