Adding The Fatal Conceit.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -423,6 +423,33 @@ Hayek on Rationalism
             The Fatal Conceit
         </h3>
 
+        <p>
+        In <i>The Fatal Conceit</i>. Hayek's last work published before his
+        death, he introduces the idea of <i>group selection</i> into his
+        corpus. Here, we find a notion of "rationality" completely disconnected
+        from any idea that the actors engaged in this "rational" behavior have
+        any thoughts about how their behavior "makes sense" at all. Their
+        patterns of behavior may be completely opaque to the actors themselves,
+        yet they exhibit what Vernon Smith (2010) terms "ecological
+        rationality": in this construct, the behavior of the "agents" involved
+        in an activity can be completely mindless, but it is termed "rational"
+        because, to an outside observer, an "aim" can be assigned to this
+        pattern of activity, which, despite not being the aim of
+        any agent actually engaged in the activity,
+        nevertheless makes the activity seem sensible to the observer.
+        </p>
+
+        <p>
+        But this sort of "rationality" renders the idea of "rational action"
+        vacuous: if an outcome is not intended by any agent involved in
+        achieving it, why in the world is their behavior deemed "rational"
+        simply because a theorist, judging from outside the realm of their
+        activities, deems that outcome satifactory according to his theory? By
+        this criterion, a physicist could declare that electrons are
+        "rationally" orbiting atomic nucleii, since he is in possesion of a
+        theory that explains why they are doing so.
+        </p>
+
 <h2>
     Oakeshott on Rationalism
 </h2>
@@ -1071,6 +1098,12 @@ Bibliography
         97, no.  3 (August 1, 2003): 447–58.
     </p>
     
+    <p class="biblio">
+    Smith, Vernon L.
+    <i>Rationality in Economics: Constructivist and Ecological Forms</i>.
+        Cambridge: Cambridge University Press, 2010.
+    </p>
+
     <p class="biblio">
     Taleb, Nassim Nicholas.
         <i>Antifragile: Things That Gain from Disorder</i>.
