Adding more on the Fatal Conceit.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -400,7 +400,7 @@ Hayek on Rationalism
         leading liberal thinkers of the nineteenth century...' (1973: 72), 
         and one realizes there is something significantly different
         from Oakeshott is going on here.
-        Taleb notes the paradox here: "We may... think that... 
+        Taleb notes the unresolved tension in Hayek's view: "We may... think that... 
         Hayek would be in the antifragile, antirationalist category... 
         But Hayek missed the notion of optionality..." (2014: 258).
         </p>
