--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -237,6 +237,63 @@ Hayek on Rationalism
             for their decisions. (1937: 3.22)
         </blockquote>
 
+        <p>
+        The Use of Knowledge in Society
+        </p>
+
+        <blockquote>
+            The peculiar character of the problem of a rational economic order
+            is determined precisely by the fact that the knowledge of the
+            circumstances of which we must make use never exists in
+            concentrated or integrated form but solely as the dispersed bits of
+            incomplete and frequently contradictory knowledge which all the
+            separate individuals possess. (H.3)
+        </blockquote>
+
+        <blockquote>
+            It will at once be evident that on this point the position will be
+            different with respect to different kinds of knowledge; and the
+            answer to our question will therefore largely turn on the relative
+            importance of the different kinds of knowledge; those more likely
+            to be at the disposal of particular individuals and those which we
+            should with greater confidence expect to find in the possession of
+            an authority made up of suitably chosen experts. If it is today so
+            widely assumed that the latter will be in a better position, this
+            is because one kind of knowledge, namely, scientific knowledge,
+            occupies now so prominent a place in public imagination that we
+            tend to forget that it is not the only kind that is relevant. (H.8)
+         </blockquote>
+
+         <blockquote>
+             Today it is almost heresy to suggest that scientific knowledge is
+             not the sum of all knowledge. But a little reflection will show
+             that there is beyond question a body of very important but
+             unorganized knowledge which cannot possibly be called scientific
+             in the sense of knowledge of general rules: the knowledge of the
+             particular circumstances of time and place. (H.9)
+         </blockquote>
+
+         <p>
+            In the above passage, Hayek nearly hits upon the idea of the
+            "concrete universal."
+         </p>
+
+         <blockquote>
+             We need to remember only how much we have to learn in any
+             occupation after we have completed our theoretical training, how
+             big a part of our working life we spend learning particular jobs,
+             and how valuable an asset in all walks of life is knowledge of
+             people, of local conditions, and of special circumstances. (H.9)
+         </blockquote>
+
+         <blockquote>
+             It is a curious fact that this sort of knowledge should today be
+             generally regarded with a kind of contempt and that anyone who by
+             such knowledge gains an advantage over somebody better equipped
+             with theoretical or technical knowledge is thought to have acted
+             almost disreputably. (H.10)
+         </blockquote> 
+
     <h3>
         The Sensory Order
     </h3>
