Finished Cheung section.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -131,15 +131,24 @@ Hayek and Oakeshott
     </p>
 
 <h3>
-    Previous Comparisons of Hayek and Oakeshott
+    Comparing Hayek and Oakeshott
 </h3>
 
-    <h4>
-        Kenneth Minogue
-    </h4>
     <p>
-    Kenneth Minogue summed up the difference between Hayek and Oakeshott, from
-    a perspective sympathetic to the views of the latter, as follows:
+    The initial impression one might adopt from seeing that both Hayek and
+    Oakeshott criticize rationalism, and both regarded neutral rules important
+    to civil society, is that they were saying essentially the same thing,
+    perhaps merely using slightly different terms. Boyd and Morrison (2007)
+    adopt this line, noting the preference of both thinkers for "spontaneous
+    orders." But the very phrase they use to connect the two in the title of
+    their paper might give us pause, since Oakeshott
+    never used the term "spontaneous order."
+    </p>
+
+    <p>
+    Kenneth Minogue understood that there was a significant
+    difference between Hayek and Oakeshott on this matter,
+    which he summed up as follows:
     </p>
 
     <blockquote>
@@ -163,14 +172,83 @@ Hayek and Oakeshott
     Hobbesian account of Christianity in particular as dealing (as he puts it)
     with ‘the local and transitory mischief in which the universal predicament
     of mankind appeared’ in his time. Hayek is too close to the mischief to
-    recognize the universal predicament. (Minogue, 2002)
+    recognize the universal predicament. (2002)
     </blockquote>
 
+    <p>
+    But the most important precursor of this paper is Chor-yung Cheung's (2014)
+    "The Critique of Rationalism and the Defense of Individuality: Oakeshott and Hayek."
+    In it, he presents a keenly insightful analysis
+    of how Oakeshott's understanding of rationalism differs from Hayek's.
+    In fact, his analysis is close enough to that offered in this paper that,
+    were it not for the fact that he never explicitly identifies the basis of
+    the differences he highlights, this paper would not have been written.
+    </p>
 
-    <h4>
-        Chor-yung Cheung
-    </h4>
+    <p>
+    Cheung begins by noting that Hayek and
+    Oakeshott share "the preference for emerging 
+    practices to deliberately designed institutions" (3): thus, the common
+    albeit superficial impression that the two must be talking about pretty much
+    the same thing. Nevertheless, he continues,
+    "there are important differences between the two as regards the respective
+    critiques of Rationalism..." (4)
+    </p>
 
+    <p>
+    In fact, Oakeshott's claim about Hayek's The Road to Serfdom, that "A plan
+    to resist all planning maybe better than its opposite, but it belongs to
+    the same style of politics," is correct. As Cheung puts it,
+    Hayek is "employing an ideology... or a doctrine derived from abstract
+    political principles to defend individual freedom and Western civilization"
+    (4).
+    </p>
+
+    <p>
+    "The problem with Rationalism, according to Oakeshott, is that it does not
+    recognize practical knowledge is knowledge at all, and it asserts that only
+    technical knowledge is rational..." (4) As though Hayek were 
+    seeking to illustrate this problem, Cheung quotes him claiming 
+    "one should not 'disdain to seek assistance from whatever
+    nonrational institutions or habits have proven their worth'" (5).
+    The difference here is that Hayek, despite his critique of what he sees as
+    'rationalism,' still accepts the rationalist's erroneous claim that only
+    abstract reasoning is rational, while practical knowledge is "nonrational."
+    </p>
+
+    <p>
+    Cheung illustrates Oakeshott's view using the particular example of
+    morality:
+    </p>
+
+    <blockquote>
+    Oakeshott tries to show that while the dominant reflective mode of
+    morality in the West appears to be very self conscious, rational and
+    scientific, reality, it is abstract, detach from the concrete data de
+    traditional moral habits, unstable and dogmatic...
+    "if we use these abstracted principles as the supreme guides for our moral
+    conduct, this is... putting the cart before the horse, because these
+    principles are would have been distilled from the actual concrete
+    practices, without which they will lose most of their meanings. (5)
+    </blockquote>
+
+    <p>
+    Cheung indicates Hayek's mistake in thinking that we are "unconsciously
+    following a rule" in activites like riding a bicycle or playing billiards,
+    without quite being able to put his finger on what exactly the mistake is:
+    "but it is not entirely clear in what sense riding a bicycle should be
+    understood as following the laws of mechanics" (6).
+    </p>
+
+    <p>
+    Cheung comes perilously close to obviating the need for this paper when he
+    notes that "Hayek's philosophical perspective it is very likely blind to a
+    lot of the things that Oakeshott has said regarding the poetic character of
+    human activity" (7). But he never makes explicit what it is that is
+    different between Hayek's philosophical perspective and Oakeshott's.
+    And thus, the remained of this paper, which will proceed by turning first
+    to Hayek on rationalism.
+    </p>
 
 <h2>
 Hayek on Rationalism
@@ -1008,6 +1086,7 @@ Bibliography
     Cheung, Chor-yung.
         "The Critique of Rationalism and the Defense of
         Individuality: Oakeshott and Hayek."
+        <i>Cosmos and Taxis</i>, Issue 1:3, 2014.
         Accessed October 27, 2016.
         https://cosmosandtaxis.files.wordpress.com/2014/11/ct_1_3_cheung.pdf.
     </p>
