Adding refs from Cheung.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -421,7 +421,23 @@ Hayek on Rationalism
         </p>
     
         <p>
-        Hayek, in this work, explicitly contends that
+        In this work, Hayek asserts that all mentation is relational:
+        </p>
+        <blockquote>
+            all the attributes of sensory qualities (and of other mental
+            qualities) are relations to other such qualities, and that the
+            totality of all these relations between mental qualities exhausts
+            all there is to be said about the mental order. (35????)
+        </blockquote>
+
+        <p>
+            This raises the problem noted above: if A is a something not
+            understandable on its own, and B is a similar something, how can any
+            relation between A and B be comprehesnsible?
+        </p>
+
+        <p>
+        Hayek goes on to contend explicitly that
         the concrete is dependent upon the abstract:
         </p>
         
