Including Cheung refs.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -1302,6 +1302,12 @@ Bibliography
     </p>
     
     <p class="biblio">
+    Hayek, F. A.
+        <i>Studies in Philosophy, Politics and Economics</i>.
+        Chicago: Univ. of Chicago Press, 1980.
+    </p>
+
+    <p class="biblio">
     Hayek, F.  A.
         <i>The Fatal Conceit</i>.
         London: Routledge, 1988.
