Added Lasch to biblio.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -83,14 +83,18 @@ Introduction
     affairs from first principles. (See, for instance, Callahan and Ikeda,
     2014, for an examination of the
     deleterious effects of rationalism on urban
-    planning, or Scott, 2008, for the negative outcomes of rationalist
-    agriculture.) Hayek wrote that such a denigration of customary arrangements
+    planning, Scott, 2008, for the negative outcomes of rationalist
+    agriculture, and Lasch, 1991, for
+    an analysis of the rationalist damage to the family.)
+    Hayek wrote that such a denigration of customary arrangements
     and exaltation of abstract reason had become so commonplace that it was
     common to think:
-    "we should so re-design society and its institutions that all our actions
-    will be wholly guided by known purposes. To most people these propositions
-    seem almost self-evident and to constitute an attitude alone worthy of a
-    thinking being" (1973: 9).
+    "we should so re-design society and its
+    institutions that all our actions
+    will be wholly guided by known purposes.
+    To most people these propositions
+    seem almost self-evident and to constitute an
+    attitude alone worthy of a thinking being" (1973: 9).
     </p>
     
     <p>
@@ -1340,8 +1344,16 @@ Bibliography
     </p>
     
     <p class="biblio">
+    Lasch, Christopher.
+        <i>The Culture of Narcissism: American Life in an Age of
+            Diminishing Expectations</i>.
+        New York: W.W. Norton, 1991.
+    </p>
+
+    <p class="biblio">
     McNamara, Peter, and Louis Hunt.
-        <i>Liberalism, Conservatism, and Hayek's Idea of Spontaneous Order</i>.
+        <i>Liberalism, Conservatism, and
+            Hayek's Idea of Spontaneous Order</i>.
         First Edition edition.
         New York: Palgrave Macmillan, 2007.
     </p>
