Replaced common with typical

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -87,8 +87,8 @@ Introduction
     agriculture, and Lasch, 1991, for
     an analysis of the rationalist damage to the family.)
     Hayek wrote that such a denigration of customary arrangements
-    and exaltation of abstract reason had become so commonplace that it was
-    common to think:
+    and exaltation of abstract reason had become
+    so commonplace that it was typically thought that:
     "we should so re-design society and its
     institutions that all our actions
     will be wholly guided by known purposes.
