Another round of edits.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -434,7 +434,7 @@ Hayek on Rationalism
             all the attributes of sensory qualities (and of other mental
             qualities) are relations to other such qualities, and that the
             totality of all these relations between mental qualities exhausts
-            all there is to be said about the mental order. (35????)
+            all there is to be said about the mental order. (35)
         </blockquote>
 
         <p>
