Another round of edits.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -1366,6 +1366,12 @@ Bibliography
     
     <p class="biblio">
     Oakeshott, Michael.
+        <i>On Human Conduct</i>.
+        Oxford [Eng.]: Clarendon Press, 1975.
+    </p>
+
+    <p class="biblio">
+    Oakeshott, Michael.
         <i>Rationalism in Politics and Other Essays</i>.
         Indianapolis: Liberty Fund, 1991.
     </p>
