Another round of edits.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -23,7 +23,9 @@ Dr. Eugene Callahan
 </p>
 
 <p class="author_info">
-Department of Computer Science (Tandon)
+Department of Computer Science,
+<br />
+Tandon School of Engineering
 </p>
 
 <p class="author_info">
