--- a/AntiRats.html
+++ b/AntiRats.html
@@ -1,22 +1,74 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <link href="style.css" rel="stylesheet" type="text/css"/>
+        <title>
 
-The Critics of Modernist Rationalism
-Introduction: Setting the Modernist Stage
-Lewis Carroll: What the Tortoise Told Achilles
-G.K. Chesterton: Chesterton’s Fence (Dale Ahlquist? Stratford Caldecott?)
-Alfred North Whitehead: The Fallacy of Misplaced Concreteness
-T.S. Eliot: 
-C.S. Lewis: The Abolition of Man
-Kurt Godel:
-Ludwig Wittgenstein: Following a Rule (David Boucher?) 
-Michael Oakeshott: Rationalism Is Irrational (Corey Abel?)
-Michael Polanyi: Objective Knowledge Is Subjectively Endorsed (Kizito Kiyimba)
-F.A. Hayek: The Errors of Constructivist Rationalism (Gus diZerega)
-Eric Voegelin: (Gene Callahan)
-Russell Kirk: (Bradley Birzer)
-Jane Jacobs: Critiquing the Rationalist City (Sanford Ikeda)
-Christopher Alexander: The Timeless Way of Building
-Alasdair MacIntyre: Putting Virtue in Its Time and Place
-James C. Scott: James C. Scott?
+        </title>
+    </head>
+
+    <body>
+        <h1>
+            The Critics of Modernist Rationalism
+        </h1>
+
+        <ul>
+            <li>
+                Introduction: Setting the Stage
+            </li>
+            <li>
+                Lewis Carroll: What the Tortoise Told Achilles
+            </li>
+            <li>
+                G.K. Chesterton: Chesterton’s Fence 
+            </li>
+            <li>
+                Alfred North Whitehead: The Fallacy of Misplaced Concreteness
+            </li>
+            <li>
+                T.S. Eliot: 
+            </li>
+            <li>
+                C.S. Lewis: The Abolition of Man
+            </li>
+            <li>
+                Kurt Godel:
+            </li>
+            <li>
+                Ludwig Wittgenstein: Following a Rule 
+            </li>
+            <li>
+                Michael Oakeshott: Rationalism Is Irrational 
+            </li>
+            <li>
+                Michael Polanyi: Objective Knowledge Is Subjectively Endorsed 
+            </li>
+            <li>
+                F.A. Hayek: The Errors of Constructivist Rationalism 
+            </li>
+            <li>
+                Eric Voegelin: 
+            </li>
+            <li>
+                Russell Kirk: 
+            </li>
+            <li>
+                Jane Jacobs: Critiquing the Rationalist City 
+            </li>
+            <li>
+                Christopher Alexander: The Timeless Way of Building
+            </li>
+            <li>
+                Alasdair MacIntyre: Putting Virtue in Its Time and Place
+            </li>
+            <li>
+                James C. Scott: 
+            </li>
+        </ul>
+
+    </body>
+</html>
 
 
 
